<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.juanaj.albedroid.bbdd.NuevoPunto"
    tools:showIn="@layout/activity_nuevo_punto">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfnombrebbdd"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/nuevo_punto_nombre"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfcallebbdd"
        android:hint="@string/nuevo_punto_calle"
        android:layout_below="@+id/tfnombrebbdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfdescripcionbbdd"
        android:hint="@string/nuevo_punto_descripcion"
        android:layout_below="@+id/tfcallebbdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfciudadbbdd"
        android:hint="@string/nuevo_punto_ciudad"
        android:layout_below="@+id/tfdescripcionbbdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibVolverNP"
        android:src="@mipmap/ic_home_red"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ib_agregarP"
        android:src="@mipmap/ic_agregar"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/tfciudadbbdd"
        android:layout_toStartOf="@+id/ibModificarP"
        android:layout_marginLeft="50dp" />

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibModificarP"
        android:src="@mipmap/ic_modify"
        android:layout_alignTop="@+id/ib_agregarP"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibVerP"
        android:src="@mipmap/ic_seeee"
        android:layout_alignTop="@+id/ibModificarP"
        android:layout_alignEnd="@+id/tfciudadbbdd"
        android:layout_marginEnd="50dp" />

</RelativeLayout>
